@@ -1,144 +1,40 @@
-package testpackage;
-
-
+import io.cucumber.java.en.And;
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.When;
 import io.cucumber.java.en.Then;
-
-
-
+import org.junit.Assert;
 import yasmeen.softwareproject.*;
 
-
 import javax.swing.*;
-import java.awt.event.ActionEvent;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-
 
 import static org.junit.Assert.*;
-
-
-
-import static yasmeen.softwareproject.Application.*;
-import static yasmeen.softwareproject.Application.isNumber;
+import static org.junit.Assert.assertEquals;
 
 public class Testing {
-
-
-
-
-
     Application a=new Application();
-
     boolean flag;
-    private String oldName;
-    private String olddate;
-    private String newName;
+    private String oldName,newdate,olddate;
+    private String newName,msg;
 
 
-    private long newAge,newPhoneNumber,newPassword;
- private int ind1,ind2;
+ private long newAge,newPhoneNumber,newPassword;
+ private int ind1,ind2,old1,old2;
 
-
+    private Product product;
     private int oldqua,oldvalue;
 
     @Given("I am an {string} and I want to add new products")
     public void i_am_an_and_i_want_to_add_new_products(String string) {
         // Write code here that turns the phrase above into concrete actions
-         a=new Application();
-         someMethod();
-        setPublicuser(new Owneraccount("Yasmeen",12,"a2@g.c",1231231231,0));
-        assertEquals(string, getPublicuser().gettype());
+        Application.publicuser=new Owneraccount("Yasmeen",12,"a2@g.c",1231231231,0);
 
     }
 
     @When("I add {string} to the store")
     public void i_add_to_the_store(String string) {
+        // Write code here that turns the phrase above into concrete actions
+        Application.addproduct(string,0,0,"1/12/2029",0,"");
 
-
-
-Application.getProducts().add(new Product("",1,1,"1/1/2029",11,"",""));
-Application.getPosts().add(new Post("","","",1));
-        Application.getProducts().getFirst().getdiscount();
-        Application.getProducts().getFirst().updatediscount(1);
-        Application.getProducts().getFirst().getprice();
-        Application.getProducts().getFirst().updateprice(1);
-        Application.getProducts().getFirst().getexpire();
-        Application.getProducts().getFirst().updateexpire("1/1/2029");
-        Application.ratePost(1,Application.getPosts().getFirst());
-        Application.getPosts().getFirst().getrate();
-        Application.getPosts().getFirst().getRates();
-
-
-        Application.getProducts().getFirst().setquantity(1);
-        Application.getProducts().getFirst().getquantity();
-        Application.getProducts().getFirst().getpath();
-        addproduct(string,0,0,"1/12/2029",0,"");
-        Suppliersframe.makeJlabel();
-        Suppliersframe.makePanel();
-        Suppliersframe.makeJscrollPane();
-        Suppliersframe.makeJtextarea();
-        Suppliersframe.makeJtextfield();
-        Suppliersframe.makeJpaswwordfield();
-        Suppliersframe.makeJbutton("m");
-        UserPage.getIndex1();
-        UserPage.setIndex1(1);
-
-        UserPage.getjTextArea2();
-        UserPage.getjPasswordField1();
-        UserPage.getjPanel29();
-        UserPage.getjPanel21();
-
-        Admin1.jButton14ActionPerformed();
-        Application.getLoginpage().setVisible(false);
-
-
-        List<Product >m=Application.getProducts();
-        List<Post >p=Application.getPosts();
-     Application.setPosts(new ArrayList<>());
-     Application.setProducts(new ArrayList<>());
-
-        Application.getStoreowners().add(new Owneraccount("yasmeen",1,"yasmeen1@gmail.com",1231231231,12121212));
-        Application.getAdmins().add(new Admin("yasmeen",1,"yasmeen2@gmail.com",1231231231,12121212));
-        Application.getUsers().add(new User("yasmeen",1,"yasmeen4@gmail.com",1231231231,12121212));
-        Application.getSuppliers().add(new Suppliers("yasmeen",1,"yasmeen3@gmail.com",1231231231,12121212));
-        Application.getLoginpage().getjPasswordField1().setText("12121212");
-        Application.getLoginpage().getjTextField1().setText("yasmeen1@gmail.com");
-        Application.getLoginpage().getjTextField3().setText("Owner");
-        Application.getLoginpage().jButton1ActionPerformed();
-        Application.getOwnerpage().setVisible(false);
-        Application.getLoginpage().getjTextField1().setText("yasmeen2@gmail.com");
-        Application.getLoginpage().getjPasswordField1().setText("12121212");
-        Application.getLoginpage().getjTextField3().setText("Admin");
-        Application.getLoginpage().jButton1ActionPerformed();
-        Application.getAdminpage().setVisible(false);
-        Application.getLoginpage().getjTextField1().setText("yasmeen3@gmail.com");
-        Application.getLoginpage().getjPasswordField1().setText("12121212");
-        Application.getLoginpage().getjTextField3().setText("Supplier");
-        Application.getLoginpage().jButton1ActionPerformed();
-        Application.getSupplierspage().setVisible(false);
-        Application.getLoginpage().getjTextField1().setText("yasmeen4@gmail.com");
-        Application.getLoginpage().getjPasswordField1().setText("12121212");
-        Application.getLoginpage().getjTextField3().setText("User");
-        Application.getLoginpage().jButton1ActionPerformed();
-        Application.getUserspage().setVisible(false);
-        Application.getLoginpage().getjTextField1().setText("yasmeen4@gmail.com");
-
-        Application.getLoginpage().getjTextField3().setText("User");
-        Application.getLoginpage().jButton1ActionPerformed();
-        Application.getOwnerpage().setVisible(false);
-
-
-        Application.setPosts(p);
-        Application.setProducts(m
-        );
-
-
-
-
-        
     }
 
     @Then("the product {string} should be added to the store")
@@ -146,12 +42,9 @@ Application.getPosts().add(new Post("","","",1));
         // Write code here that turns the phrase above into concrete actions
 
         flag=false;
-        Application.addpost("1","1","1");
-        MainClass m=new MainClass();
-        Application.getLoginpage().setVisible(false);
-        for (int i = 0; i< getProducts().size(); i++){
+        for (int i=0;i<Application.products.size();i++){
 
-            if(getProducts().get(i).getname().equals(string)){
+            if(Application.products.get(i).getname().equals(string)){
                 flag=true;
 
             }
@@ -164,19 +57,18 @@ Application.getPosts().add(new Post("","","",1));
     public void i_am_an_and_i_want_to_add_a_new_quantity_to_the_product(String string, String string2) {
         // Write code here that turns the phrase above into concrete actions
        oldName=string2;
-       setType("kk");
     }
 
     @When("I add a new quantity with value {int}")
     public void i_add_a_new_quantity_with_value(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
 
-        for (int i = 0; i< getProducts().size(); i++){
+        for (int i=0;i<Application.products.size();i++){
 
-            if(getProducts().get(i).getname().equals(oldName)){
+            if(Application.products.get(i).getname().equals(oldName)){
              oldvalue=i;
-             oldqua= getProducts().get(i).getquantity();
-                getProducts().get(i).setquantity(getProducts().get(i).getquantity()+int1);
+             oldqua=Application.products.get(i).getquantity();
+                Application.products.get(i).setquantity(Application.products.get(i).getquantity()+int1);
 
             }
         }
@@ -185,7 +77,7 @@ Application.getPosts().add(new Post("","","",1));
     @Then("the quantity of the product {string} should increase by {int}")
     public void the_quantity_of_the_product_should_increase_by(String string, Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-       assertEquals(getProducts().get(oldvalue).getquantity(),oldqua+int1);
+       assertEquals(Application.products.get(oldvalue).getquantity(),oldqua+int1);
     }
 
     @Given("I am an {string} and I want to update the expiry date of the existing product {string}")
@@ -198,13 +90,13 @@ Application.getPosts().add(new Post("","","",1));
     @When("I update the expiry date of to \"{int}\\/{int}\\/{int}")
     public void i_update_the_expiry_date_of_to(Integer int1, Integer int2, Integer int3) {
         // Write code here that turns the phrase above into concrete actions
-        String newdate = int1 + "/" + int2 + "/" + int3;
+        newdate=int1+"/"+int2+"/"+int3;
 
-        for (int i = 0; i< getProducts().size(); i++){
+        for (int i=0;i<Application.products.size();i++){
 
-            if(getProducts().get(i).getname().equals(oldName)){
-                olddate= getProducts().get(i).getexpire();
-updateproduct(i, getProducts().get(i).getprice(), newdate);
+            if(Application.products.get(i).getname().equals(oldName)){
+                olddate=Application.products.get(i).getexpire();
+Application.updateproduct(i,Application.products.get(i).getprice(),newdate);
 oldvalue=i;
             }
         }
@@ -214,7 +106,7 @@ oldvalue=i;
     @Then("the expiry date of the product should be changed")
     public void the_expiry_date_of_the_product_should_be_changed() {
         // Write code here that turns the phrase above into concrete actions
-        assertNotEquals(olddate, getProducts().get(oldvalue).getexpire());
+        assertNotEquals(olddate,Application.products.get(oldvalue).getexpire());
     }
 
     @Given("I am an {string} and I want to update the expiry date of the product {string}")
@@ -227,9 +119,9 @@ oldvalue=i;
     public void the_system_does_not_find_the_product(String string) {
         // Write code here that turns the phrase above into concrete actions
      flag=false;
-        for (int i = 0; i< getProducts().size(); i++){
+        for (int i=0;i<Application.products.size();i++){
 
-            if(getProducts().get(i).getname().equals(oldName)){
+            if(Application.products.get(i).getname().equals(oldName)){
               flag=true;
               break;
             }
@@ -253,18 +145,16 @@ oldvalue=i;
     public void i_remove_from_the_store(String string) {
         // Write code here that turns the phrase above into concrete actions
         oldName=string;
-
     }
 
     @Then("the number of products in the store should decrease by {int}")
     public void the_number_of_products_in_the_store_should_decrease_by(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        oldqua= getProducts().size();
-        removeproduct(oldName);
+        Application.removeproduct(oldName);
         flag=false;
-        for (int i = 0; i< getProducts().size(); i++){
+        for (int i=0;i<Application.products.size();i++){
 
-            if(getProducts().get(i).getname().equals(oldName)){
+            if(Application.products.get(i).getname().equals(oldName)){
                 flag=true;
                 break;
             }
@@ -290,9 +180,9 @@ oldvalue=i;
     @Then("a message should appear indicating that there is nothing to remove and the number of products remains the same")
     public void a_message_should_appear_indicating_that_there_is_nothing_to_remove_and_the_number_of_products_remains_the_same() {
         // Write code here that turns the phrase above into concrete actions
-     int oldsize= getProducts().size();
-        removeproduct(oldName);
-       assertEquals(oldsize, getProducts().size());
+     int oldsize=Application.products.size();
+        Application.removeproduct(oldName);
+       assertEquals(oldsize,Application.products.size());
 
     }
 
@@ -306,13 +196,13 @@ oldvalue=i;
     @When("I update the price of {string} to {int}")
     public void i_update_the_price_of_to(String string, Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-oldqua=int1;
+
     oldName=string;
-        for (int i = 0; i< getProducts().size(); i++){
+        for (int i=0;i<Application.products.size();i++){
 
-            if(getProducts().get(i).getname().equals(oldName)){
-
-                updateproduct(i,int1, getProducts().get(oldvalue).getexpire());
+            if(Application.products.get(i).getname().equals(oldName)){
+                oldqua=Application.products.get(i).getprice();
+                Application.updateproduct(i,int1,Application.products.get(oldvalue).getexpire());
                 oldvalue=i;
             }
         }
@@ -324,11 +214,11 @@ oldqua=int1;
     public void the_price_of_the_product_should_be_changed(String string) {
         // Write code here that turns the phrase above into concrete actions
 
+     assertNotEquals(oldqua,Application.products.get(oldvalue).getprice());
+        for (int i=0;i<Application.products.size();i++){
 
-        for (int i = 0; i< getProducts().size(); i++){
-
-            if(getProducts().get(i).getname().equals(string)){
-                assertEquals(getProducts().get(i).getprice(),oldqua);
+            if(Application.products.get(i).getname().equals(oldName)){
+                assertNotEquals(Application.products.get(i).getexpire(),oldqua);
             }
         }
     }
@@ -343,10 +233,10 @@ oldqua=int1;
     public void i_apply_a_discount_of_on(Integer int1, String string) {
         // Write code here that turns the phrase above into concrete actions
 
-        for (int i = 0; i< getProducts().size(); i++){
+        for (int i=0;i<Application.products.size();i++){
 
-            if(getProducts().get(i).getname().equals(string)){
-                implementdiscount(int1, getProducts().get(i));
+            if(Application.products.get(i).getname().equals(string)){
+                Application.implementdiscount(int1,Application.products.get(i));
                 oldvalue=i;
             }
         }
@@ -357,10 +247,10 @@ oldqua=int1;
     public void the_discount_on_the_product_should_be_updated_to(String string, int int1) {
         // Write code here that turns the phrase above into concrete actions
 
-        for (int i = 0; i< getProducts().size(); i++){
+        for (int i=0;i<Application.products.size();i++){
 
-            if(getProducts().get(i).getname().equals(string)){
-                assertEquals(getProducts().get(i).getdiscount(),int1);
+            if(Application.products.get(i).getname().equals(string)){
+                assertEquals(Application.products.get(i).getdiscount(),int1);
             }
         }
     }
@@ -374,9 +264,9 @@ oldqua=int1;
     @When("I attempt to add {string} with the expiry date {string}")
     public void i_attempt_to_add_with_the_expiry_date(String string, String string2) {
         // Write code here that turns the phrase above into concrete actions
-        int old= getProducts().size();
-       addproduct(string,0,0,string2,0,"");
-       assertEquals(getProducts().size(),old);
+        int old=Application.products.size();
+       Application.addproduct(string,0,0,string2,0,"");
+       assertEquals(Application.products.size(),old);
     }
 
     @Then("a message should appear indicating that the expiry date format is incorrect")
@@ -394,9 +284,9 @@ oldqua=int1;
     @When("I attempt to add {string} with a price of {int}")
     public void i_attempt_to_add_with_a_price_of(String string, int int1) {
         // Write code here that turns the phrase above into concrete actions
-        int old= getProducts().size();
-        addproduct(string,int1,0,"1/12/2029",0,"");
-        assertEquals(getProducts().size(),old);
+        int old=Application.products.size();
+        Application.addproduct(string,int1,0,"1/12/2029",0,"");
+        assertEquals(Application.products.size(),old);
     }
 
     @Then("a message should appear indicating that the price is invalid")
@@ -415,9 +305,9 @@ oldqua=int1;
     @When("I attempt to add {string} with a quantity of {int}")
     public void i_attempt_to_add_with_a_quantity_of(String string, Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        int old= getProducts().size();
-        addproduct(string,0,int1,"1/12/2029",0,"");
-        assertEquals(getProducts().size(),old);
+        int old=Application.products.size();
+        Application.addproduct(string,0,int1,"1/12/2029",0,"");
+        assertEquals(Application.products.size(),old);
     }
 
     @Then("a message should appear indicating that the quantity is invalid")
@@ -435,9 +325,9 @@ oldqua=int1;
     @When("I attempt to add {string} with a different price and quantity")
     public void i_attempt_to_add_with_a_different_price_and_quantity(String string) {
         // Write code here that turns the phrase above into concrete actions
-        int old= getProducts().size();
-        addproduct(string,0,0,"1/12/2029",0,"");
-        assertEquals(getProducts().size(),old);
+        int old=Application.products.size();
+        Application.addproduct(string,0,0,"1/12/2029",0,"");
+        assertEquals(Application.products.size(),old);
     }
 
     @Then("a message should appear indicating that the product already exists")
@@ -455,12 +345,12 @@ oldqua=int1;
     public void i_change_my_name_to(String string) {
         // Write code here that turns the phrase above into concrete actions
         newName=string;
-        updateinformation(newName, getPublicuser().getage(), getPublicuser().getphone(), getPublicuser().getpassword());
+        Application.updateinformation(newName,Application.publicuser.getage(),Application.publicuser.getphone(),Application.publicuser.getpassword());
     }
 
     @Then(": my old name should be {string} and the new name should be {string}")
     public void my_old_name_should_be_and_the_new_name_should_be(String string, String string2) {
-      assertNotEquals(oldName, getPublicuser().getname());
+      assertNotEquals(oldName,Application.publicuser.getname());
     }
 
     @Given("I am an {string} and I want to update my age, which is {int}")
@@ -472,13 +362,13 @@ oldqua=int1;
     @When("I change my age to {int}")
     public void i_change_my_age_to(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        updateinformation(newName,int1, getPublicuser().getphone(), getPublicuser().getpassword());
+        Application.updateinformation(newName,int1,Application.publicuser.getphone(),Application.publicuser.getpassword());
     }
 
     @When("my old age should be {int} and the new age should be {int}")
     public void my_old_age_should_be_and_the_new_age_should_be(Integer int1, Integer int2) {
         // Write code here that turns the phrase above into concrete actions
-        assertNotEquals(oldqua, getPublicuser().getage());
+        assertNotEquals(oldqua,Application.publicuser.getage());
     }
 
 
@@ -486,20 +376,20 @@ oldqua=int1;
     public void i_am_a_and_i_want_to_update_the_supplier_s_name_which_is(String string, String string2) {
         // Write code here that turns the phrase above into concrete actions
       oldName=string2;
-        setPublicuser(new Suppliers("Yaqoot", 0, "a1@g.c", 0, 12121212));
+        Application.publicuser=new Suppliers("Yaqoot", 0, "a1@g.c", 0, 12121212);
     }
 
     @When("I change the Supplier's name to {string}")
     public void i_change_the_supplier_s_name_to(String string) {
         // Write code here that turns the phrase above into concrete actions
-updateinformation(string, getPublicuser().getage(), getPublicuser().getphone(), getPublicuser().getpassword());
+Application.updateinformation(string,Application.publicuser.getage(),Application.publicuser.getphone(),Application.publicuser.getpassword());
 
     }
 
     @Then("the Supplier's name should be updated to {string}")
     public void the_supplier_s_name_should_be_updated_to(String string) {
         // Write code here that turns the phrase above into concrete actions
-   assertNotEquals(getPublicuser().getname(),newName);
+   assertNotEquals(Application.publicuser.getname(),newName);
 
     }
 
@@ -515,15 +405,14 @@ updateinformation(string, getPublicuser().getage(), getPublicuser().getphone(), 
     @When("I change the Supplier's age to {int}")
     public void i_change_the_supplier_s_age_to(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        updateinformation(getPublicuser().getname(),int1, getPublicuser().getphone(), getPublicuser().getpassword());
+        Application.updateinformation(Application.publicuser.getname(),int1,Application.publicuser.getphone(),Application.publicuser.getpassword());
 
     }
 
     @Then("the Supplier's age should be updated to {int}")
-    public void the_supplier_s_age_should_be_updated_to(int int1) {
+    public void the_supplier_s_age_should_be_updated_to(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-assertNotEquals(oldqua, getPublicuser().getage());
-
+assertNotEquals(oldqua,Application.publicuser.getage());
     }
 
 
@@ -539,17 +428,13 @@ assertNotEquals(oldqua, getPublicuser().getage());
     public void i_am_an_and_i_want_to_sign_in_to_the_system_as_admin(String string) {
         // Write code here that turns the phrase above into concrete actions
       oldName=string;
-      setType(string);
+      Application.type=string;
     }
 
     @Then(": i must enter my email {string} and my password {int} as admin")
     public void i_must_enter_my_email_and_my_password_as_admin(String string, Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        setPublicuser(getUserByEmail(string));
-      flag= login(string, int1 + "");
-      assertTrue(validateUser(string ,int1+""));
-       assertEquals(findUserInListofadmins(getAdmins(),string).getemail(),string);
-        assertTrue(isadmin(string));
+      flag=Application.login(string,new String(int1+""));
     }
 
     @Then(": the system must pass me as admin")
@@ -557,7 +442,7 @@ assertNotEquals(oldqua, getPublicuser().getage());
 
       assertTrue(flag);
 
-      assertEquals(getPublicuser().gettype(),oldName);
+      assertEquals(Application.publicuser.gettype(),oldName);
 
     }
 
@@ -565,15 +450,13 @@ assertNotEquals(oldqua, getPublicuser().getage());
     public void i_am_an_and_i_want_to_sign_in_to_the_system_as_owner(String string) {
         // Write code here that turns the phrase above into concrete actions
         oldName=string;
-        setType(string);
+        Application.type=string;
     }
 
     @Then(": i must enter my email {string} and my password {int} as owner")
     public void i_must_enter_my_email_and_my_password_as_owner(String string, Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        flag= login(string, int1 + "");
-        assertEquals(findUserInListofowners(getStoreowners(),string).getemail(),string);
-        assertTrue(isowner(string));
+        flag=Application.login(string,new String(int1+""));
     }
 
     @Then(": the system must pass me as Owner")
@@ -581,22 +464,19 @@ assertNotEquals(oldqua, getPublicuser().getage());
         // Write code here that turns the phrase above into concrete actions
         assertTrue(flag);
 
-        assertEquals(getPublicuser().gettype(),oldName);
-
+        assertEquals(Application.publicuser.gettype(),oldName);
     }
 
     @Given(": i am an {string} and i want to sign in to the system as supplier")
     public void i_am_an_and_i_want_to_sign_in_to_the_system_as_supplier(String string) {
         // Write code here that turns the phrase above into concrete actions
         oldName=string;
-        setType(string);
+        Application.type=string;
     }
 
     @Then(": i must enter my email {string} and my password {int} as supplier")
     public void i_must_enter_my_email_and_my_password_as_supplier(String string, Integer int1) {
-        flag= login(string, int1 + "");
-        assertEquals(findUserInListofsupploers(getSuppliers(),string).getemail(),string);
-        assertTrue(issuppleir(string));
+        flag=Application.login(string,new String(int1+""));
     }
 
     @Then(": the system must pass me as supplier")
@@ -604,26 +484,20 @@ assertNotEquals(oldqua, getPublicuser().getage());
         // Write code here that turns the phrase above into concrete actions
         assertTrue(flag);
 
-        assertEquals(getPublicuser().gettype(),oldName);
-
+        assertEquals(Application.publicuser.gettype(),oldName);
     }
 
     @Given(": i am an {string} and i want to sign in to the system as user")
     public void i_am_an_and_i_want_to_sign_in_to_the_system_as_user(String string) {
         // Write code here that turns the phrase above into concrete actions
         oldName=string;
-        setType(string);
-
+        Application.type=string;
     }
 
-
     @Then(": i must enter my email {string} and my password {int} as user")
-    public void i_must_enter_my_email_and_my_password_as_user(String string, int int1) {
+    public void i_must_enter_my_email_and_my_password_as_user(String string, Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        flag= login(string, int1 + "");
-        assertEquals(findUserInListofusers(getUsers(),string).getemail(),string);
-        assertTrue(isPasswordCorrect(getPublicuser(),int1+""));
-        showMessage("True password");
+        flag=Application.login(string,new String(int1+""));
     }
 
     @Then(": the system must pass me as user")
@@ -631,7 +505,7 @@ assertNotEquals(oldqua, getPublicuser().getage());
         // Write code here that turns the phrase above into concrete actions
         assertTrue(flag);
 
-        assertEquals(getPublicuser().gettype(),oldName);
+        assertEquals(Application.publicuser.gettype(),oldName);
     }
 
 
@@ -648,7 +522,7 @@ assertNotEquals(oldqua, getPublicuser().getage());
     @Given("I am a {string} and I want to update my info")
     public void iAmAAndIWantToUpdateMyInfo(String string) {
         // Write code here that turns the phrase above into concrete actions
-        setPublicuser(new User("Hitler",1,"1",2,12));
+        Application.publicuser=new User("Hitler",1,"1",2,12);
 
     }
     @Given("my old name is {string}")
@@ -665,21 +539,21 @@ assertNotEquals(oldqua, getPublicuser().getage());
         this.newPassword = int3;
 
         // Assuming Application.updateInformation updates the user's info
-        updateinformation(newName, int1, int2, int3);
+        Application.updateinformation(newName, int1, int2, int3);
     }
     @Then("the information must be updated")
     public void theInformationMustBeUpdated() {
         // Write code here that turns the phrase above into concrete actions
 
 
-        assertNotEquals(oldName, getPublicuser().getname());
+        assertNotEquals(oldName, Application.publicuser.getname());
 
         // Add more assertions to check if other information is updated correctly
-        assertEquals(newName, getPublicuser().getname());
+        assertEquals(newName, Application.publicuser.getname());
 
-        assertEquals(newAge, getPublicuser().getage());
-        assertEquals(newPhoneNumber, getPublicuser().getphone());
-        assertEquals(newPassword, getPublicuser().getpassword());
+        assertEquals(newAge, Application.publicuser.getage());
+        assertEquals(newPhoneNumber, Application.publicuser.getphone());
+        assertEquals(newPassword, Application.publicuser.getpassword());
     }
 
 
@@ -695,31 +569,19 @@ assertNotEquals(oldqua, getPublicuser().getage());
     @Then(": i choose the report name {string}")
     public void i_choose_the_report_name(String string) {
         // Write code here that turns the phrase above into concrete actions
-   assertTrue(generatereport(getsalesmessage(),string));
-        sendEmail("s12112895@stu.najah.edu","odehyasmeen22@gmail.com","TEST","nhdo kelh sbgl qynb");
-        assertTrue(isNumber("12"));
-        assertFalse(isNumber(""));
-        Application.getSales().getFirst().getprofit();
-        Application.getSales().getFirst().getname();
-      new Orders("1",1,"");
-        Application.getSales().getFirst().updatestatus("PP");
-        Application.getLoguppage().jLabel9MouseClicked();
-        Application.getLoginpage().setVisible(false);
-        Application.getLoginpage().jLabel9MouseClicked();
-        Application.getLoguppage().setVisible(false);
-
+   assertTrue(Application.generatereport(Application.getsalesmessage(),string));
     }
 
 
     @When(": i open the profits page the message {string} must appear")
     public void i_open_the_profits_page_the_message_must_appear(String string) {
         // Write code here that turns the phrase above into concrete actions
-oldName= getsalesmessage();
+oldName=Application.getsalesmessage();
     }
     @Then(": the system must pass")
     public void the_system_must_pass() {
         // Write code here that turns the phrase above into concrete actions
-        assertEquals(oldName, getsalesmessage());
+        assertEquals(oldName,Application.getsalesmessage());
 
     }
 
@@ -731,7 +593,7 @@ oldName= getsalesmessage();
     @Then("the best selling profit will be displayes as this {string}")
     public void the_best_selling_profit_will_be_displayes_as_this(String string) {
         // Write code here that turns the phrase above into concrete actions
-        assertEquals(string, Objects.requireNonNull(getmaxprofit()).getname());
+        assertEquals(string,Application.getmaxprofit().getname());
     }
 
 
@@ -743,39 +605,33 @@ oldName= getsalesmessage();
     @When(": i click at add post i must choose the path {string} of the image and description {string} and name {string}")
     public void i_click_at_add_post_i_must_choose_the_path_of_the_image_and_description_and_name(String string, String string2, String string3) {
         // Write code here that turns the phrase above into concrete actions
-       oldvalue= getPosts().size();
-       addpost(string,string2,string3);
+       oldvalue=Application.posts.size();
+       Application.addpost(string,string2,string3);
     }
     @Then("the number of posts must be incrased by one")
     public void the_number_of_posts_must_be_incrased_by_one() {
         // Write code here that turns the phrase above into concrete actions
-        assertEquals(getPosts().size(),oldvalue+1);
+        assertEquals(Application.posts.size(),oldvalue+1);
 
     }
 
     @Given(": i am a new user with type {string} to be a new admin")
     public void i_am_a_new_user_with_type_to_be_a_new_admin(String string) {
         // Write code here that turns the phrase above into concrete actions
-setType2(string);
+Application.type2=string;
 
     }
     @Given(": my name is {string} and my age is {int} and my phone number is {int} and password is {int} and email {string} as admin")
     public void my_name_is_and_my_age_is_and_my_phone_number_is_and_password_is_and_email_as_admin(String string, Integer int1, Integer int2, Integer int3, String string2) {
         // Write code here that turns the phrase above into concrete actions
-    oldvalue= getAdmins().size();
-    assertTrue(isValidEmail("yasmeen109@gmail.com"));
-    assertFalse(isValidEmail(string));
-
-    assertTrue(isValidFutureDate(Product.dateToString(Product.stringToDate("1/9/2029"))));
-    logup(string2,string,int1,int2,int3);
-    getLoginpage().setVisible(false);
-    assertTrue(isfoundmail(string2));
-    updatepassword(12);
+    oldvalue=Application.Admins.size();
+    Application.logup(string2,string,int1,int2,int3);
+    Application.loginpage.setVisible(false);
     }
     @Then("the Admin users must be increased by {int}")
     public void the_admin_users_must_be_increased_by(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        assertEquals(getAdmins().size(),oldvalue+int1);
+        assertEquals(Application.Admins.size(),oldvalue+1);
     }
 
 
@@ -784,21 +640,19 @@ setType2(string);
     @Given(": i am a new user with type {string} to be a new owner")
     public void i_am_a_new_user_with_type_to_be_a_new_owner(String string) {
         // Write code here that turns the phrase above into concrete actions
-        setType2(string);
+        Application.type2=string;
     }
     @Given(": my name is {string} and my age is {int} and my phone number is {int} and password is {int} and email {string} as owner")
     public void my_name_is_and_my_age_is_and_my_phone_number_is_and_password_is_and_email_as_owner(String string, Integer int1, Integer int2, Integer int3, String string2) {
         // Write code here that turns the phrase above into concrete actions
-        oldvalue= getStoreowners().size();
-        logup(string2,string,int1,int2,int3);
-        getLoginpage().setVisible(false);
-        assertTrue(isfoundmail(string2));
-        updatepassword(12);
+        oldvalue=Application.Owners.size();
+        Application.logup(string2,string,int1,int2,int3);
+        Application.loginpage.setVisible(false);
     }
     @Then("the Owner users must be increased by {int}")
     public void the_owner_users_must_be_increased_by(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        assertEquals(getStoreowners().size(),oldvalue+int1);
+        assertEquals(Application.Owners.size(),oldvalue+1);
     }
 
 
@@ -807,22 +661,19 @@ setType2(string);
     @Given(": i am a new user with type {string} to be a new supplier")
     public void i_am_a_new_user_with_type_to_be_a_new_supplier(String string) {
         // Write code here that turns the phrase above into concrete actions
-     
-        
+        Application.type2=string;
     }
     @Given(": my name is {string} and my age is {int} and my phone number is {int} and password is {int} and email {string} as supplier")
     public void my_name_is_and_my_age_is_and_my_phone_number_is_and_password_is_and_email_as_supplier(String string, Integer int1, Integer int2, Integer int3, String string2) {
         // Write code here that turns the phrase above into concrete actions
-        oldvalue= getSuppliers().size();
-        logup(string2,string,int1,int2,int3);
-        getLoginpage().setVisible(false);
-        assertTrue(isfoundmail(string2));
-        updatepassword(12);
+        oldvalue=Application.suppliers.size();
+        Application.logup(string2,string,int1,int2,int3);
+        Application.loginpage.setVisible(false);
     }
     @Then("the Suppliers users must be increased by {int}")
     public void the_suppliers_users_must_be_increased_by(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-      //  assertEquals(getSuppliers().size(),oldvalue+int1);
+        assertEquals(Application.suppliers.size(),oldvalue+1);
     }
 
 
@@ -831,30 +682,19 @@ setType2(string);
     @Given(": i am a new user with type {string} to be a new user")
     public void i_am_a_new_user_with_type_to_be_a_new_user(String string) {
         // Write code here that turns the phrase above into concrete actions
-        setType2(string);
+        Application.type2=string;
     }
     @Given(": my name is {string} and my age is {int} and my phone number is {int} and password is {int} and email {string} as user")
     public void my_name_is_and_my_age_is_and_my_phone_number_is_and_password_is_and_email_as_user(String string, Integer int1, Integer int2, Integer int3, String string2) {
         // Write code here that turns the phrase above into concrete actions
-        oldvalue= getUsers().size();
-        logup(string2,string,int1,int2,int3);
-        getLoginpage().setVisible(false);
-        assertTrue(isfoundmail(string2));
-        assertFalse(isfoundmail("yasmeen1000@g.c"));
-        populateAndSetupList(new JList<>(),new ArrayList<>());
-        ArrayList<String>m=new ArrayList<>();
-        m.add("PP");
-        populateAndSetupList(new JList<>(),new ArrayList<>());
-        populateAndSetupList(new JList<>(),m);
-        updatepassword(12);
+        oldvalue=Application.users.size();
+        Application.logup(string2,string,int1,int2,int3);
+        Application.loginpage.setVisible(false);
     }
     @Then("the User users must be increased by {int}")
     public void the_user_users_must_be_increased_by(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        assertEquals(getUsers().size(),oldvalue+int1);
-        Card.createImageLabel1("man");
-        new Card(1,2,"","man");
-        new PostPanel("1","1","man",1);
+        assertEquals(Application.users.size(),oldvalue+1);
     }
 
 
@@ -867,9 +707,9 @@ setType2(string);
     public void i_can_choose_an_owner_or_supplier(String string, String string2) {
         // Write code here that turns the phrase above into concrete actions
     oldName=string2;
-    getStoreowners().add(new Owneraccount(string,1,"2",1,1));
+    Application.Owners.add(new Owneraccount(string,1,"2",1,1));
     newName=string2;
-        getSuppliers().add(new Suppliers (string2
+        Application.suppliers.add(new Suppliers (string2
 
 
 
@@ -885,26 +725,27 @@ setType2(string);
 
         oldvalue=oldqua=ind1=ind2=0;
         // Write code here that turns the phrase above into concrete actions
-        for (int i = 0; i< getStoreowners().size(); i++){
-            if(getStoreowners().get(i).getname().equals(oldName)){
-                oldvalue= getStoreowners().get(i).messages().size();
+     msg=string;
+        for (int i=0;i<Application.Owners.size();i++){
+            if(Application.Owners.get(i).getname().equals(oldName)){
+                oldvalue=Application.Owners.get(i).messages().size();
                 ind1=i;
-                sendfeedback(string, getStoreowners().get(i));
+                Application.sendfeedback(msg,Application.Owners.get(i));
             }
         }
-        for (int i = 0; i< getSuppliers().size(); i++){
-            if(getSuppliers().get(i).getname().equals(newName)){
-                oldqua= getSuppliers().get(i).messages().size();
+        for (int i=0;i<Application.suppliers.size();i++){
+            if(Application.suppliers.get(i).getname().equals(newName)){
+                oldqua=Application.suppliers.get(i).messages().size();
                 ind2=i;
-                sendfeedback(string, getSuppliers().get(i));
+                Application.sendfeedback(msg,Application.suppliers.get(i));
             }
         }
     }
     @Then("the number of messages to each one must be increased by {int}")
     public void the_number_of_messages_to_each_one_must_be_increased_by(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        assertEquals(oldvalue+int1, getStoreowners().get(ind1).messages().size());
-        assertEquals(oldqua+1, getSuppliers().get(ind2).messages().size());
+        assertEquals(oldvalue+1,Application.Owners.get(ind1).messages().size());
+        assertEquals(oldqua+1,Application.suppliers.get(ind2).messages().size());
     }
 
 
@@ -913,13 +754,13 @@ setType2(string);
     public void i_am_a_and_i_want_to_evaluate_the_first_post_appear_to(String string, Integer int1) {
         // Write code here that turns the phrase above into concrete actions
      newAge=int1;
-     oldvalue= getPosts().getFirst().getRates().size();
-     ratePost(int1, getPosts().getFirst());
+     oldvalue=Application.posts.get(0).getRates().size();
+     Application.rate_post(int1,Application.posts.get(0));
     }
     @Then(": the post evaluations mus be increased by {int}")
     public void the_post_evaluations_mus_be_increased_by(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-    assertEquals(oldvalue+int1, getPosts().getFirst().getRates().size());
+    assertEquals(oldvalue+1,Application.posts.get(0).getRates().size());
     }
 
 
@@ -948,7 +789,7 @@ setType2(string);
     @Then(": the product must appear which is {int}")
     public void the_product_must_appear_which_is(int int1) {
         // Write code here that turns the phrase above into concrete actions
-  assertEquals(findProductsByName( getProducts(),newName).size(),int1);
+  assertEquals(Application.findProductsByName(Application.products,newName).size(),int1);
     }
 
     @Given(": i am a {string} and i want to search with fillter with all products that does not have {string}")
@@ -959,7 +800,7 @@ setType2(string);
     @Then(": the number of products must appear which is {int}")
     public void the_number_of_products_must_appear_which_is(int int1) {
         // Write code here that turns the phrase above into concrete actions
-        assertEquals(findProductsByDescription((ArrayList<Product>) getProducts(),newName).size(),int1);
+        assertEquals(Application.findProductsByDescription(Application.products,newName).size(),int1);
     }
 
 
@@ -967,26 +808,26 @@ setType2(string);
     public void i_am_a_and_i_want_to_purchase_the_product(String string, String string2) {
         // Write code here that turns the phrase above into concrete actions
         newName=string2;
-        getProducts().add(new Product(newName,10,10,"1/12/2029",0,"",""));
+        Application.products.add(new Product(newName,10,10,"1/12/2029",0,"",""));
     }
     @Given(": i want to Purchase {int} of this product")
     public void i_want_to_purchase_of_this_product(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-      for (int i = 0; i< getProducts().size(); i++){
- if(getProducts().get(i).getname().equals(newName)){
+      for (int i=0;i<Application.products.size();i++){
+ if(Application.products.get(i).getname().equals(newName)){
 
-              oldvalue= getProducts().get(i).getquantity();
+              oldvalue=Application.products.get(i).getquantity();
               ind1=i;
               break;
           }
       }
-        purchase(newName,int1);
+        Application.purchase(newName,int1);
       oldqua=int1;
     }
     @Then(": the quantity of that product must be increased by {int} and the number of sells must be increased by {int}")
     public void the_quantity_of_that_product_must_be_increased_by_and_the_number_of_sells_must_be_increased_by(Integer int1, Integer int2) {
         // Write code here that turns the phrase above into concrete actions
-        assertEquals(getProducts().get(ind1).getquantity()+oldqua,oldvalue);
+        assertEquals(Application.products.get(ind1).getquantity()+oldqua,oldvalue);
          }
 
     @Given(": i am a {string} and i want to purchase the product {string} but with invalid value")
@@ -997,21 +838,21 @@ setType2(string);
     @Given(": i want to Purchase {int} of this product and this is less than zero")
     public void i_want_to_purchase_of_this_product_and_this_is_less_than_zero(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        for (int i = 0; i< getProducts().size(); i++){
-            if(getProducts().get(i).getname().equals(newName)){
+        for (int i=0;i<Application.products.size();i++){
+            if(Application.products.get(i).getname().equals(newName)){
 
-                oldvalue= getProducts().get(i).getquantity();
+                oldvalue=Application.products.get(i).getquantity();
                 ind1=i;
                 break;
             }
         }
-        purchase(newName,int1);
+        Application.purchase(newName,int1);
         oldqua=int1;
     }
     @Then(": nothing will be changed")
     public void nothing_will_be_changed() {
         // Write code here that turns the phrase above into concrete actions
-        assertNotEquals(getProducts().get(ind1).getquantity()+oldqua,oldvalue);
+        assertNotEquals(Application.products.get(ind1).getquantity()+oldqua,oldvalue);
     }
 
     @Given(": i am a {string} and i want to purchase the product {string} but with value that is bigger than the orginal quantity")
@@ -1022,23 +863,21 @@ setType2(string);
     @Given(": i want to Purchase {int} of this product and this is bigger than the orginal quantity")
     public void i_want_to_purchase_of_this_product_and_this_is_bigger_than_the_orginal_quantity(Integer int1) {
         // Write code here that turns the phrase above into concrete actions
-        for (int i = 0; i< getProducts().size(); i++){
-            if(getProducts().get(i).getname().equals(newName)){
+        for (int i=0;i<Application.products.size();i++){
+            if(Application.products.get(i).getname().equals(newName)){
 
-                oldvalue= getProducts().get(i).getquantity();
+                oldvalue=Application.products.get(i).getquantity();
                 ind1=i;
                 break;
             }
         }
-        purchase(newName,int1);
+        Application.purchase(newName,int1);
         oldqua=int1;
-
     }
     @Then(": nothing will be changed for it")
     public void nothing_will_be_changed_for_it() {
         // Write code here that turns the phrase above into concrete actions
-        assertNotEquals(getProducts().get(ind1).getquantity()+oldqua,oldvalue);
-
+        assertNotEquals(Application.products.get(ind1).getquantity()+oldqua,oldvalue);
 
     }
 
